refactor(api): refactor obsolete APIs including:
- obsolete Date APIs
- obsolete Zipfile from Apache Commons Compress Updates
- JWT related obsolete APIs
- deprecated Junrar method
etc...

Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>